--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,16 @@
 {
-    "builds" : [{
-        "src" : "project/wsgi.py",
-        "use" : "@vercel/python",
-        "config" : {"maxLambdSize" : "15mb" , "runtime": "python3.13.2"}
-    }],
-    "routes" : [
+    "builds": [
+        {
+            "src": "project/wsgi.py",
+            "use": "@vercel/python",
+            "config": { "maxLambdaSize": "15mb", "runtime": "python3.13" }
+        }
+    ],
+    "routes": [
+        {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },
         {
             "src": "/(.*)",
             "dest": "project/wsgi.py"
